correct portait align for movie item

--- a/src/main/movies/Movies.css
+++ b/src/main/movies/Movies.css
@@ -7,13 +7,13 @@
     padding: 20px 0;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-height: 800px) and (max-width: 500px) {
     .movies {
         flex-basis: 30%;
         display: flex;
         flex-wrap: wrap;
-
-        margin: 100px;
-        padding: 20px 0;
+        margin-left: 50px;
+        marker-top: 50px;
+        padding: 10px 0;
     }
 }
